# EventSystem

./: CMakeLists.txt  README.md
include/: event.h  keyboardEvent.h  mouseEvent.h  window.h  windowEvent.h
src/: main.cpp  window.cpp
